cmake_minimum_required(VERSION 3.20)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_COMPILER g++)
project(DatabaseServer VERSION 1.0)
add_executable(${PROJECT_NAME})
target_sources(${PROJECT_NAME} PRIVATE Application.cpp)
target_sources(${PROJECT_NAME} PRIVATE Main.cpp)
target_sources(${PROJECT_NAME} PRIVATE Object.cpp)
target_sources(${PROJECT_NAME} PRIVATE Server.cpp)
target_sources(${PROJECT_NAME} PRIVATE ThreadPool.cpp)
set_target_properties(DatabaseServer PROPERTIES LINKER_LANGUAGE CXX)
project(DatabaseClient VERSION 1.0)
add_executable(${PROJECT_NAME})
target_sources(${PROJECT_NAME} PRIVATE ApplicationClient.cpp)
target_sources(${PROJECT_NAME} PRIVATE Client.cpp)
target_sources(${PROJECT_NAME} PRIVATE ThreadPool.cpp)
set_target_properties(DatabaseClient PROPERTIES LINKER_LANGUAGE CXX)
